fix: remove selection on mobile & fix css issues

--- a/src/components/history/history.scss
+++ b/src/components/history/history.scss
@@ -145,5 +145,9 @@
         }
       }
     }
+
+    img {
+      width: 250px;
+    }
   }
 }
