--- a/src/components/services/services.scss
+++ b/src/components/services/services.scss
@@ -272,7 +272,6 @@
       justify-content: flex-start;
       padding: 1rem 0;
       gap: 2rem;
-      overflow-x: visible;
 
       &--card {
         width: 300px;
@@ -289,6 +288,12 @@
         width: 40px;
         height: 40px;
       }
+    }
+  }
+
+  .technologies {
+    img {
+      width: 500px;
     }
   }
 }
